# adventofcode

./: .bazelrc  .clang-format  .editorconfig  .gitignore  .prettierrc.yaml  BUILD.bazel  MODULE.bazel
2020/: day1.py  day2.py  day3.py  day3input.txt  day4.py  day5.py  day6.py  day7.py
2024/: day7-real-data.txt  day7_bruteforce_p1.py  day7_p1.py
2025/: BUILD.bazel  day1.py
