load("@bazel_env.bzl", "bazel_env")

bazel_env(
    name = "bazel_env",
    toolchains = {
        # "jdk": "@rules_java//toolchains:current_host_java_runtime",
        "python": "@rules_python//python:current_py_toolchain",
    },
    tools = {
        # Tools can be specified as labels.
        # "buildifier": "@buildifier_prebuilt//:buildifier",
        # "go": "@rules_go//go",
        # Tool paths can also reference the Make variables provided by toolchains.
        # "jar": "$(JAVABASE)/bin/jar",
        # "java": "$(JAVA)",
        "python": "$(PYTHON3)",
    },
)
