# yaml-language-server: $schema=https://raw.githubusercontent.com/bazelbuild/bazel-central-registry/main/metadata.schema.json
###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "advent_of_code_monorepo")
bazel_dep(name = "rules_python", version = "1.7.0")

# TODO(@waflores): setup python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.14",
)

# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
# pip.parse(
#     hub_name = "pypi",
#     python_version = "3.14",
#     requirements_lock = "//:requirements.txt",
# )
# use_repo(pip, "pypi")

bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
