load("@rules_python//python:py_binary.bzl", "py_binary")

py_binary(
    name = "day1",
    srcs = [
        "day1.py",
    ],
    data = [
        "day1_part1_input.txt",
    ],
    visibility = ["//visibility:public"],
    deps = ["@rules_python//python/runfiles"],
    # env = {
    #     "PYTHONINSPECT": "1",
    # },
)
